--- a/css/adm/administrador_materia.css
+++ b/css/adm/administrador_materia.css
@@ -34,6 +34,10 @@ main {
     padding: 0 2vh;
 }
 
+.containerTitulo--displayFlex a{
+    display: none;
+}
+
 .containerTitulo__tituloPagina {
     color: white;
     font-size: 1.2rem;
@@ -538,7 +542,7 @@ td {
 
 
 /* DROPDOWN */
-.adicionar--curso{
+.adicionar--curso {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -546,6 +550,11 @@ td {
 }
 
 @media (max-width: 999px) {
+
+    .containerTitulo--displayFlex a{
+        display: block;
+    }
+
     .menuLateral {
         visibility: hidden;
         opacity: 0;
@@ -593,6 +602,18 @@ td {
 
     .menuSuperior__inputCursos {
         max-width: 60vw;
+    }
+
+    .menuConteudo__titulosConteudo--displayFlex{
+        font-size: 0.7rem;
+    }
+
+    .tabelaItemsMaterias{
+        font-size: 0.9rem;
+    }
+
+    .dataCargaHoraria i {
+        display: none;
     }
 
     /* MODAL ADICIONAR */
