--- a/css/professor/disciplina.css
+++ b/css/professor/disciplina.css
@@ -23,7 +23,7 @@ margin-top: 5vh;
 .card_disciplina:hover{
     box-shadow: 8px 8px 5px 2px rgba(0, 0, 0, 0.25);
     border: 4px solid #3084B4;
-    transition: all .2s;
+    transition:  .2s ease-in-out;
 }
 
 .nome_disciplina{
