--- a/css/professor/criterio.css
+++ b/css/professor/criterio.css
@@ -1,4 +1,4 @@
-.modal__adicionar__criterio{
+.modal__adicionar__criterio {
     width: 100%;
     height: 100%;
     z-index: 1;
@@ -10,8 +10,8 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-#adcCriterio{
-    background-color:#074A71;
+#adcCriterio {
+    background-color: #074A71;
     width: 70%;
     color: #ffff;
     display: flex;
@@ -21,7 +21,7 @@
     gap: 2vh;
 }
 
-#sairCriterioModal{
+#sairCriterioModal {
     width: 10vw;
     padding: 10px 0;
     border-radius: 8px;
@@ -30,11 +30,11 @@
     transition: .4s ease-in-out;
 }
 
-#sairCriterioModal:hover, #sendCriterio:hover{
+#sairCriterioModal:hover, #sendCriterio:hover {
     scale: 0.9;
 }
 
-#sendCriterio{
+#sendCriterio {
     width: 10vw;
     padding: 10px 0;
     border-radius: 8px;
@@ -45,38 +45,74 @@
     place-self: center;
 }
 
-.inputsCriterio{
+.inputsCriterio {
     display: grid;
     place-self: center;
     width: 100%;
 }
 
-.inputsCriterio textarea{
+.inputsCriterio textarea {
     width: 100%;
     height: 80px;
     resize: none;
 }
 
-.cont{
+.cont {
     width: 40%;
     display: flex;
     justify-content: space-between;
     margin-top: 3vh;
 }
 
-.titleForm{
+.titleForm {
     font-size: clamp(1.2rem, 0.45rem + 2.4vw, 1.8rem);
     letter-spacing: 1px;
 }
-.d-flex{
+
+.d-flex {
     display: flex;
 }
-@media (max-width:600px){
-    #sairCriterioModal, #sendCriterio{
+
+
+.cards_criterio_professor {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5vw;
+    justify-content: space-around;
+}
+
+.cardCriterio{
+    display: flex;
+    width: 25vw;
+    height: 20vh;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: #D9D9D9;
+    cursor: pointer;
+    border: 1px solid #3084B4;
+    transition: .3s ease-in-out;
+    font-family: 'Montserrat', sans-serif;
+    padding-left: 1%;
+}
+
+.cardCriterio:hover{
+    box-shadow: 8px 8px 5px 2px rgba(0, 0, 0, 0.25);
+    border: 4px solid #3084B4;
+    transition:  .2s ease-in-out;
+}
+
+
+@media (max-width:600px) {
+    #sairCriterioModal, #sendCriterio {
         width: 25vw;
     }
 
-    .cont{
+    .cont {
         width: 95%;
     }
+
+    .cardCriterio{
+        width: 85vw;
+    }
+
 }
