--- a/css/professor/criterio.css
+++ b/css/professor/criterio.css
@@ -20,8 +20,38 @@
     flex-direction: column;
     gap: 2vh;
 }
+.modal__editar__criterio {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: .9;
+    position: absolute;
+    background-color: #3084B4;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#editarCriterio {
+    background-color: #074A71;
+    width: 70%;
+    color: #ffff;
+    display: flex;
+    height: auto;
+    padding: 4%;
+    flex-direction: column;
+    gap: 2vh;
+}
 
 #sairCriterioModal {
+    width: 10vw;
+    padding: 10px 0;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: .4s ease-in-out;
+}
+#sairCriterioModalEditar {
     width: 10vw;
     padding: 10px 0;
     border-radius: 8px;
@@ -33,8 +63,21 @@
 #sairCriterioModal:hover, #sendCriterio:hover {
     scale: 0.9;
 }
+#sairCriterioModalEditar:hover, #sendCriterioEditado:hover {
+    scale: 0.9;
+}
 
 #sendCriterio {
+    width: 10vw;
+    padding: 10px 0;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: .4s ease-in-out;
+    display: grid;
+    place-self: center;
+}
+#sendCriterioEditado {
     width: 10vw;
     padding: 10px 0;
     border-radius: 8px;
@@ -67,6 +110,7 @@
 .titleForm {
     font-size: clamp(1.2rem, 0.45rem + 2.4vw, 1.8rem);
     letter-spacing: 1px;
+    color: #ffff;
 }
 
 .d-flex {
@@ -103,7 +147,7 @@
 
 
 @media (max-width:600px) {
-    #sairCriterioModal, #sendCriterio {
+    #sairCriterioModal, #sendCriterio, #sairCriterioModalEditar, #sendCriterioEditado{
         width: 25vw;
     }
 
