--- a/css/adm/editar_administrador_professor.css
+++ b/css/adm/editar_administrador_professor.css
@@ -341,6 +341,7 @@ main {
     background-color: #E0E0E0;
     width: 25%;
     height: 100%;
+    max-height: 42vh;
     border: 1px solid #074A71;
     border-radius: 10px;
 }
@@ -348,6 +349,47 @@ main {
 .listasConteudo__listaMaterias--displayFlex {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.listaMaterias__cardMaterias{
+    width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    overflow: auto;
+}
+
+.cardMaterias__linkMaterias{
+    display: flex;
+    flex-direction: column;
+    background-color: #D9D9D9;
+    border: 1px solid #3084B4;
+    width: 80%;
+    height: 100px;
+    text-align: start;
+    filter: drop-shadow(0px 4px 4px #00000040);
+    transition: all 200ms;
+    align-items: start;
+    padding-left: 3%;
+}
+
+.cardMaterias__linkMaterias:hover {
+    transform: scaleX(1.1);
+    background-color: #c7c7c7;
+}
+
+.linkMaterias__siglaMateria {
+    font-weight: 600;
+    font-size: 1.3rem;
+    text-align: start;
+}
+
+.linkMaterias__descricao{
+    font-size: 0.8rem;
+    text-align: start;
 }
 
 /* TITULOS */
