--- a/css/professor/criterio.css
+++ b/css/professor/criterio.css
@@ -128,7 +128,8 @@
 .cardCriterio{
     display: flex;
     width: 25vw;
-    height: 20vh;
+    height: auto;
+    gap: 4vh;
     flex-direction: column;
     justify-content: space-around;
     background-color: #D9D9D9;
@@ -157,7 +158,6 @@
 
     .cardCriterio{
         width: 85vw;
-        height: 30vh;
     }
 
 }
