--- a/css/adm/administrador_alunos.css
+++ b/css/adm/administrador_alunos.css
@@ -249,7 +249,6 @@ main {
     text-align: center;
 }
 
-
 .dataCurso {
     width: 37%;
     text-align: center;
@@ -331,6 +330,15 @@ td {
 }
 
 #salvarBtn {
+    font-size: 1.3rem;
+    padding: 10px;
+    background-color: #3084B4;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#salvarBtnEditar {
     font-size: 1.3rem;
     padding: 10px;
     background-color: #3084B4;
@@ -543,6 +551,14 @@ td {
     color: #585858;
     text-decoration: none;
     font-size: 3rem;
+}
+
+.displayNone {
+    display: none;
+}
+
+.alunoLista--backGroundRed {
+    background-color: #9e4747;
 }
 
 @media (max-width: 999px) {
