--- a/css/adm/administrador_turmas.css
+++ b/css/adm/administrador_turmas.css
@@ -365,7 +365,7 @@ td {
     font-size: 3rem;
 }
 
-.sigla__carga--horaria {
+.data__inicio--data__conclusao {
     padding-top: 5px;
     display: flex;
     justify-content: space-between;
@@ -378,7 +378,7 @@ td {
     flex-direction: column;
 }
 
-.input__sigla {
+.input__data--inicio {
     font-size: 1rem;
     display: flex;
     flex-direction: row;
@@ -387,7 +387,7 @@ td {
     gap: 5px;
 }
 
-.input__carga--horaria {
+.input__data--conclusao {
     font-size: 1rem;
     display: flex;
     flex-direction: row;
