--- a/css/professor/criterio.css
+++ b/css/professor/criterio.css
@@ -146,6 +146,10 @@
     transition:  .2s ease-in-out;
 }
 
+.nomeAdicionar{
+    justify-content: space-between;
+}
+
 
 @media (max-width:600px) {
     #sairCriterioModal, #sendCriterio, #sairCriterioModalEditar, #sendCriterioEditado{
