--- a/css/professor/criterio.css
+++ b/css/professor/criterio.css
@@ -9,6 +9,17 @@
     justify-content: space-around;
     font-family: 'Montserrat', sans-serif;
 }
+.modal__adicionar__margem {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: .9;
+    position: absolute;
+    background-color: #3084B4;
+    align-items: center;
+    justify-content: space-around;
+    font-family: 'Montserrat', sans-serif;
+}
 
 #adcCriterio {
     background-color: #074A71;
@@ -150,6 +161,22 @@
     justify-content: space-between;
 }
 
+#sair2{
+    width: 10vw;
+    padding: 10px 0;
+    border-radius: 8px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: .4s ease-in-out;
+    background-color: transparent;
+    margin-bottom: 7vh;
+    color: #ffff;
+    border: 2px solid #ffff;
+}
+
+#sair2:hover{
+    scale: 0.9;
+}
 
 @media (max-width:600px) {
     #sairCriterioModal, #sendCriterio, #sairCriterioModalEditar, #sendCriterioEditado{
