--- a/css/professor/aluno.css
+++ b/css/professor/aluno.css
@@ -16,22 +16,7 @@ main {
     align-items: center;
 }
 
-<<<<<<< HEAD
-.criarTarefa{
-    display: flex;
-    justify-content: end;
-    align-items: center;
-    gap: 5px;
-    font-size: 1.5rem;
-    cursor: pointer;
-}
 
-
-.linha {
-    background-color: #3084B4;
-    width: 100%;
-    height: 2px;
-=======
 /**/
 
 .menuSuperior {
@@ -39,13 +24,36 @@ main {
     background-color: #3084B4;
 }
 
+.menuSuperior--displayFlex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 150px;
+}
+
+.ancoraAlunos {
+  background-color: #074A71;
+  width: 10vw;
+  height: 8vh;
+  text-align: center;
+  display: grid;
+  align-content: center;
+  color: white;
+  transition: all .200s;
+}
+
+.ancoraAlunos:hover {
+    transform: scaleX(1.04);
+    background-color: #053450;
+}
+
 /**/
 
 .containerDadosAluno {
     height: 100%;
->>>>>>> 9bd844d8b8ab278383e8f2ec080979aa765ccfe4
+    width: 30%;
 }
-
+ 
 .containerDadosAluno--displayFlex {
     display: flex;
     flex-direction: column;
@@ -56,19 +64,19 @@ main {
 /**/
 
 .containerDadosAluno__nomeAluno {
-    width: 150%;
+    width: 100%;
 }
 
 .containerDadosAluno__emailAluno {
-    width: 150%;
+    width: 100%;
 }
 
 .containerDadosAluno__dataNascimentoAluno {
-    width: 150%;
+    width: 100%;
 }
 
 .containerDadosAluno__matriculaAluno {
-    width: 150%;
+    width: 100%;
 }
 
 .containerDadosAluno__nomeAluno--displayFlex {
@@ -91,14 +99,40 @@ main {
     flex-direction: column;
 }
 
+/**/
+
+.containerDadosAluno__botaoNotasAluno {
+    height: 5vh;
+    width: 80%;
+    background-color: #074A71;
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px #00000040;
+    transition: all 0.400s;
+}
+
+.containerDadosAluno__botaoNotasAluno:hover {
+    transform: scale(1.1);
+    background-color: #053450;
+}
+
 .containerDadosAluno__botaoNotasAluno--displayFlex {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
 }
+
+.botaoNotasAluno {
+    width: 100%;
+    display: grid;
+    text-align: center;
+    align-content: center;
+    color: white;
+    font-weight: 600;
+}
+
 /**/
 
 .labelNomeAluno {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     font-weight: 600;
 }
 
@@ -106,10 +140,13 @@ main {
     background-color: #EEEEEE;
     border: transparent;
     border-bottom: 2px solid #074A71;
+    height: 4vh;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 
 .labelEmailAluno {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     font-weight: 600;
 }
 
@@ -117,10 +154,13 @@ main {
     background-color: #EEEEEE;
     border: transparent;
     border-bottom: 2px solid #074A71;
+    height: 4vh;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 
 .labelDataNascimentoAluno {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     font-weight: 600;
 }
 
@@ -128,10 +168,13 @@ main {
     background-color: #EEEEEE;
     border: transparent;
     border-bottom: 2px solid #074A71;
+    height: 4vh;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
 
 .labelMatriculaAluno {
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     font-weight: 600;
 }
 
@@ -139,26 +182,51 @@ main {
     background-color: #EEEEEE;
     border: transparent;
     border-bottom: 2px solid #074A71;
+    height: 4vh;
+    font-size: 1.1rem;
+    font-weight: 600;
 }
+
 
 /**/
 
 .containerTarefasAluno {
-   
+    width: 40%;
+    max-height: 70vh;
+    background-color: #053450;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+
 }
 
 .containerTarefasAluno__filtroTarefas {
-
+    height: 10%;
+    width: 100%;
+    background-color: aquamarine;
 }
 
 .containerTarefasAluno__listaTarefas {
+    width: 100%;
+    height: 100%;
+    background-color: azure;
+    padding: 10px;
+    overflow: auto;
 
 }
 
 .listaTarefas__cardTarefas {
-
+    height: 10vh;
+    width: 100%;
+    background-color: cadetblue;
+    cursor: pointer;
 }
 
 .cardTarefas__imagemTarefa {
+    height: 100%;
+}
 
+.cardTarefas__nomeTarefa {
+    font-size: 1.1rem;
+    font-weight: 700;
 }
