--- a/css/professor/desejadoProfessor.css
+++ b/css/professor/desejadoProfessor.css
@@ -38,7 +38,20 @@ table tr th{
   cursor: pointer;
 }
 
+.buttonAtualizar, .buttonExcluir{
+  width: 6vw;
+  height: 20px;
+  cursor: pointer;
+  border: none;
+}
 
+.buttonAtualizar{
+  background-color: #3084B4;
+}
+
+.buttonExcluir{
+  background-color: red;
+}
 
 @media  (max-width: 600px) {
 
