--- a/css/professor/aluno.css
+++ b/css/professor/aluno.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #EEEEEE;
+    grid-template-rows: auto 75px 1fr;
 }
 
 main {
@@ -14,6 +15,38 @@ main {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.nav{
+    height: 75px;
+    background-color: #3084B4;
+}
+
+.busca {
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.busca a {
+    background-color: #3084B4;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    text-align: center;
+}
+
+.busca :hover {
+    background-color: #074A71;
 }
 
 
