--- a/css/aluno/aluno.css
+++ b/css/aluno/aluno.css
@@ -572,8 +572,8 @@ label {
 }
 
 .cardLink {
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     z-index: 1;
     background-color: transparent;
