--- a/css/professor/desejadoProfessor.css
+++ b/css/professor/desejadoProfessor.css
@@ -1,44 +1,50 @@
-#container-desejado{
-    width: 100%;
-    height: 100%;
-    display: grid;
-    place-content: center;
-    place-self: center;
-    font-family: 'Montserrat', sans-serif;
+#container-desejado {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-content: center;
+  place-self: center;
+  font-family: 'Montserrat', sans-serif;
 }
-#container-desejado table{
+
+.click {
+  cursor: pointer;
+}
+
+#container-desejado table {
   height: 40vh;
   width: 80vw;
 }
 
-table tr th{
-    text-align: start;
+table tr th {
+  text-align: start;
 }
 
-.d-flex{
-  display:flex;
+.d-flex {
+  display: flex;
 }
 
-.flex-column{
+.flex-column {
   flex-direction: column;
 }
 
-.titleForm{
+.titleForm {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
 
-#adcTarefa{
+#adcTarefa {
   gap: 4vh;
 }
 
-.buttonMargemErro{
+.buttonMargemErro {
   width: 30px;
   height: 20px;
   cursor: pointer;
 }
 
-.buttonAtualizar, .buttonExcluir{
+.buttonAtualizar,
+.buttonExcluir {
   width: auto;
   height: auto;
   cursor: pointer;
@@ -46,71 +52,228 @@ table tr th{
   padding: 5px 10px;
 }
 
-.buttonAtualizar{
+.buttonAtualizar {
   background-color: #3084B4;
 }
 
-.buttonExcluir{
+.buttonExcluir {
   background-color: red;
 }
 
- .colunaPaiBotoesFinais{
+.colunaPaiBotoesFinais {
   display: flex;
   justify-content: flex-start;
   gap: 2vw;
 }
 
-.colunaPaiBotoesInicial{
- display: flex;
- justify-content: flex-end;
- gap: 2vw;
- margin-right: 1vw;
+.colunaPaiBotoesInicial {
+  display: flex;
+  justify-content: flex-end;
+  gap: 2vw;
+  margin-right: 1vw;
 }
 
-@media  (max-width: 600px) {
+/* MODEL EDITAR */
+.modal__editar {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(77, 77, 77, .7);
+  transition: all .4s;
+  line-height: 2rem;
+}
+
+.modal__editar:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__editar--content {
+  font-family: 'Montserrat';
+  border-radius: 4px;
+  position: relative;
+  max-width: 90%;
+  background: #fff;
+  padding: 1em 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.modal__editar--footer {
+  text-align: right;
+}
+
+.modal__editar--footer #editarMargem {
+  text-align: right;
+}
+
+.modal__editar--close {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  color: #585858;
+  text-decoration: none;
+  font-size: 3rem;
+}
+
+#editar {
+  font-size: 1.3rem;
+  padding: 10px;
+  background-color: #3084B4;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.input__file--valor {
+  font-size: 1rem;
+}
+
+.input__nome--valor {
+  font-size: 1rem;
+}
+
+.input__sigla--valor {
+  font-size: 1rem;
+}
+
+.input__carga--horaria--valor {
+  font-size: 1rem;
+}
+
+.input__descricao--valor {
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+#myInputDescricaoValor {
+  height: 100px;
+  resize: none;
+}
+
+
+/* MODEL DELETAR */
+.modal__deletar {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(77, 77, 77, .7);
+  transition: all .4s;
+  line-height: 2.5rem;
+}
+
+.nome__modal--deletar {
+  color: #074A71;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 2rem;
+  text-align: center;
+  padding-top: 25px;
+}
+
+.modal__deletar:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__deletar--content {
+  font-family: 'Montserrat';
+  border-radius: 4px;
+  position: relative;
+  max-width: 90%;
+  background: #fff;
+  padding: 1em 2em;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.modal__deletar--footer {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.modal__deletar--footer a {
+  font-size: 1.3rem;
+  padding: 10px 25px;
+  background-color: #3084B4;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.modal__deletar--close {
+  position: absolute;
+  top: 0px;
+  right: 10px;
+  color: #585858;
+  text-decoration: none;
+  font-size: 3rem;
+}
+
+@media (max-width: 600px) {
 
   /* table, thead, tbody, th, td, tr {
       display: block;} */
 
-      #container-desejado{
-        place-content: start;
-      }
+  #container-desejado {
+    place-content: start;
+  }
 
-  table tr{
+  table tr {
     display: flex;
     flex-direction: column;
     margin-bottom: 2vh;
   }
-  
+
   th {
-      text-align: center;
-  }
-  
-  td {
-      text-align: left;
-      border-bottom: none;
-  }
-  
-  td:before {
-      content: attr(data-label);
-      font-weight: bold;
-      text-align: left;
-      margin-bottom: 4px;
-      display: block;
+    text-align: center;
   }
 
-  .colunaPaiBotoesInicial, .colunaPaiBotoesFinais{
+  td {
+    text-align: left;
+    border-bottom: none;
+  }
+
+  td:before {
+    content: attr(data-label);
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: 4px;
+    display: block;
+  }
+
+  .colunaPaiBotoesInicial,
+  .colunaPaiBotoesFinais {
     display: block;
     margin-right: 0vw;
-   }
+  }
 
-   .resultadoDados{
+  .resultadoDados {
     margin-bottom: 8vh;
-   }
+  }
 
-   .buttonAtualizar, .buttonExcluir{
+  .buttonAtualizar,
+  .buttonExcluir {
     padding: 5px 20px;
   }
-  
+
 
 }
