--- a/css/professor/aluno.css
+++ b/css/professor/aluno.css
@@ -273,9 +273,16 @@ main {
     border-radius: 50%;
 }
 
+.bolinha__verde{
+    width: 15px;
+    height: 15px;
+    background-color: #4be73d;
+    border-radius: 50%;
+}
+
 .containerTarefasAluno__listaTarefas {
     width: 100%;
-    height: 100%;
+    height: 70vh;
     background-color: #EEEEEE;
     padding: 10px;
     overflow: auto;
